# simengine

./: .env  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  environment_trace.pkl  pyproject.toml  pytest.ini  requirements.txt  simantha_test.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-image.yml  tests.yml
config/: config.yaml  line_models.yaml  scenarios.yaml
config/recipes/: monday_schedule.yaml  quick_test.yaml  single_product.yaml
docker/: .dockerignore  .env  Dockerfile  Dockerfile.telegraf  VERSION  docker-compose.portainer.yml  docker-compose.yml  entrypoint.sh
docker/grafana/: Dockerfile
docker/grafana/dashboards/: alarm_event_log.json  downtime_reliability.json  line_balance.json  machine_kpis.json  machine_state_timeline.json  manufacturing_overview.json  oee_detail.json  shift_comparison.json  spc_control_charts.json  spc_machine_detail.json
docker/grafana/dashboards_infra/: docker_containers.json  host_metrics.json
docker/mosquitto/: mosquitto.conf
docker/neo4j/: seed-dashboards.sh  seed.py
docker/neo4j/dashboards/: manufacturing_causal.json
docker/telegraf/: generate_telegraf_conf.py  telegraf.conf
docker/webui/: app.py  inject_historian.py  requirements.txt
docker/webui/templates/: base.html  config.html  docs.html  graph.html  index.html  recipes.html  reports.html  runs.html  validation.html
docs/: GITHUB_PRIMER.md  USER_MANUAL.md  address_space.md  ai_interface.md  deployment.md  literature_review.md  phase11_spc_cpk_design.md  phase11_spc_implementation_summary.md  spc_analytics.md  xSetup.md
docs/experiments/: anomaly_detection_experiment.md
docs/specs/: clone_ai_interface_spec.md  clone_build_plan.md  clone_reuse_evaluation.md  clone_target_architecture.md  performance_and_deployment_spec.md
docs/superpowers/plans/: 2026-03-24-demo-mode-storage-management.md  2026-03-25-mqtt-pubsub.md  (+7 more)
experiment/: README.md  detect_anomalies.py  evaluate_results.py  experiment_config.yaml  generate_experiment_data.py
grafana/: README.md
grafana/dashboards/: alarm_event_log.json  downtime_reliability.json  machine_state_timeline.json  manufacturing_overview.json  shift_comparison.json
src/: advanced_machine.py  config_loader.py  config_loader_phase10.py  event_historian.py  experiment_writer.py  failure_modes.py  line_state.py  mqtt_publisher.py  neo4j_historian.py  opcua_server.py  opcua_server_backup_phase7.py  priority_maintainer.py  quality_machine.py  recipe_runner.py  sanity_simantha.py  shift_manager.py  simantha_baseline.py  spc_analytics.py
src/simengine/: __init__.py  __main__.py  plugins.py
src/simengine_historian_csv/: __init__.py
src/simengine_historian_influx/: __init__.py
src/simengine_historian_neo4j/: __init__.py
tests/: README.md  __init__.py  browse_nodes.py  conftest.py  factories.py  reproduce_crash.py  test_advanced_machine_isolation.py  test_advanced_scenarios.py  test_chat.py  test_config_files.py  test_config_simulation.py  test_config_validation.py  test_diagnostics.py  test_distribution_validation.py  test_event_historian.py  test_failure_modes.py  test_fault_injector.py  test_historian_plugins.py  test_knowledge_graph.py  test_mcp_tools.py  test_metrics_schema.py  test_mqtt_publisher.py  test_neo4j_historian.py  test_new_features.py  test_opcua_integration.py  test_opcua_mqtt_publisher.py  test_opcua_publisher.py  test_process_values.py  test_quality_routing.py  test_recipe_runner.py  test_report_engine.py  test_rest_api.py  test_scenarios.py  test_schema.py  test_schema_api.py  test_snapshot.py  test_sparkplugb.py  test_spc_analytics.py  test_station_engine.py  test_telegraf_generator.py  (+3 more)
tests/fixtures/: line_models_test.yaml
tools/: analyze_historian.py  report_engine.py
(+51 files in other folders)
