[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simengine"
version = "0.1.0"
description = "Real-time station simulation engine with OPC UA, MQTT (Part 14 + SparkplugB), and REST interfaces"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0", "ruamel.yaml>=0.18", "numpy>=1.24", "scipy>=1.10",
  "opcua>=0.98.13", "paho-mqtt>=2.0", "flask>=3.0",
]

[project.optional-dependencies]
sparkplug = ["mqtt-spb-wrapper>=2.0"]
historian-influx = ["influxdb-client>=1.30"]
historian-neo4j = ["neo4j>=5.0"]
analysis = ["pandas>=2.0"]
dev = ["pytest>=7.0", "pytest-cov>=3.0", "flake8>=6.0", "black>=23.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
markers = ["slow: long-running statistical tests"]
