[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simengine"
version = "0.1.0"
description = "Real-time station simulation engine with OPC UA, MQTT (Part 14 + SparkplugB), and REST interfaces"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0", "ruamel.yaml>=0.18", "numpy>=1.24", "scipy>=1.10",
  "opcua>=0.98.13", "paho-mqtt>=2.0", "flask>=3.0",
]

[project.optional-dependencies]
# Binding decision fallback (clone_build_plan.md §1 P0.4): mqtt-spb-wrapper
# hard-pins paho_mqtt==1.6.1 (conflicts with core paho-mqtt>=2.0), so the
# vendored Eclipse Tahu pb2 + paho path is used instead.
sparkplug = ["protobuf>=7.35"]
historian-influx = ["influxdb-client>=1.30"]
historian-neo4j = ["neo4j>=5.0"]
analysis = ["pandas>=2.0"]
dev = ["pytest>=7.0", "pytest-cov>=3.0", "flake8>=6.0", "black>=23.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
markers = ["slow: long-running statistical tests"]
