[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simengine"
version = "0.1.0"
description = "Real-time station simulation engine with OPC UA, MQTT (Part 14 + SparkplugB), and REST interfaces"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0", "ruamel.yaml>=0.18", "numpy>=1.24", "scipy>=1.10",
  "opcua>=0.98.13", "paho-mqtt>=2.0", "flask>=3.0", "mcp>=1.0",
]

[project.optional-dependencies]
# Binding decision fallback (clone_build_plan.md §1 P0.4): mqtt-spb-wrapper
# hard-pins paho_mqtt==1.6.1 (conflicts with core paho-mqtt>=2.0), so the
# vendored Eclipse Tahu pb2 + paho path is used instead.
sparkplug = ["protobuf>=7.35"]
chat = ["anthropic[mcp]>=0.50"]
historian-influx = ["influxdb-client>=1.30"]
historian-neo4j = ["neo4j>=5.0"]
analysis = ["pandas>=2.0"]
# dev pulls in sparkplug/chat deps too: test_sparkplugb.py and test_chat.py
# exercise those code paths (test_chat.py resolves "anthropic.Anthropic" via
# unittest.mock.patch, which requires the module importable even though it's
# never imported directly) and must pass in a plain `pip install -e ".[dev]"`.
dev = [
  "pytest>=7.0", "pytest-cov>=3.0", "flake8>=6.0", "black>=23.0",
  "protobuf>=7.35", "anthropic[mcp]>=0.50",
]

[tool.setuptools.packages.find]
where = ["src"]

# setuptools packages .py files only by default — the Jinja templates behind
# the dashboard/configure/comms/assistant pages are .html and would be
# silently dropped from a built wheel (invisible under `pip install -e`,
# which reads straight from the source tree) without this.
[tool.setuptools.package-data]
simengine = ["api/ui/*.html", "api/ui/static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
markers = ["slow: long-running statistical tests"]
